; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-profile.c_get_time.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-profile.c_get_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i32 }

@CLOCK_THREAD_CPUTIME_ID = common dso_local global i32 0, align 4
@NANOSEC = common dso_local global double 0.000000e+00, align 8
@KERN_SUCCESS = common dso_local global i64 0, align 8
@MICROSEC = common dso_local global double 0.000000e+00, align 8
@TASK_THREAD_TIMES_INFO = common dso_local global i32 0, align 4
@TASK_THREAD_TIMES_INFO_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (double ()* @get_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @get_time() #0 {
  %1 = alloca %struct.timespec, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @CLOCK_THREAD_CPUTIME_ID, align 4
  %5 = call i32 @clock_gettime(i32 %4, %struct.timespec* %1)
  %6 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 65535
  store i32 %8, i32* %2, align 4
  %9 = getelementptr inbounds %struct.timespec, %struct.timespec* %1, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = sitofp i32 %11 to double
  %13 = load i32, i32* %3, align 4
  %14 = sitofp i32 %13 to double
  %15 = load double, double* @NANOSEC, align 8
  %16 = fdiv double %14, %15
  %17 = fadd double %12, %16
  ret double %17
}

declare dso_local i32 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
